# debop

./: CMakeLists.txt  README.md
include/: BlockInstrumentation.h  FileManager.h  LocalReduction.h  OptionManager.h  OptionManager.h~  Profiler.h  Reduction.h  RewriterTool.h  StmtInstrumentation.h  Transformation.h
src/cpp/reducer/: Main.cpp
src/cpp/reducer/core/: LocalReduction.cpp  LocalReduction.cpp~  Reduction.cpp  Transformation.cpp
src/cpp/reducer/utils/: FileManager.cpp  IntegrationManager.cpp  OptionManager.cpp  OptionManager.cpp~  Profiler.cpp  Report.cpp
test/quicktest/: clean  compare_output  compile  run_debop  run_test  source.c  test.sh
test/quicktest/output.origin/: o0
test/quicktest/testscript/: test_0
